# PQCAnalyzer

./: .gitignore  .gitignore.govt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  VN-PQC_Analyzer.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: algorithms.json  nist_guidelines.json  sensitivity_rules.yaml  vietnam_guidelines.json
docs/: api_reference.md  architecture.md  demo.cast  flow-analysis.md  flow_demo.cast  hndl-scoring.md  pq_probe_demo.cast  user_guide_en.md  user_guide_vi.md
examples/: demo_full_workflow.py  generate_report.py  probe_pq_groups.py  run_benchmark.py  scan_single_host.py
scripts/: analyze_pq_index.py  generate_test_pcaps.sh  global_pq_index.py  mk_flow_demo_pcap.py  record_demo.sh  record_flow_demo.sh  record_pq_probe_demo.sh  render_pq_index_charts.py  render_pq_index_pdf.py  render_probe_code.py  render_scan_screenshot.py
src/: cli.py  config.py
src/api/: main.py  schemas.py
src/benchmarker/: __init__.py  comparator.py  encaps_bench.py  hardware_profile.py  keygen_bench.py  memory_bench.py  models.py  sign_bench.py  throughput_bench.py  tls_handshake_bench.py
src/flow_analyzer/: __init__.py  data_classifier.py  flow_aggregator.py  hndl_scorer.py  models.py  pcap_reader.py  reporter.py
src/reporter/: executive_summary.py  html_report.py  json_export.py  pdf_report.py
src/roadmap/: __init__.py  compliance_checker.py  cost_estimator.py  input_adapter.py  models.py  priority_engine.py  recommendation.py  risk_scorer.py  timeline_generator.py
src/scanner/: cert_analyzer.py  code_scanner.py  config_parser.py  inventory.py  models.py  pq_probe.py  ssh_scanner.py  tls_scanner.py  vpn_scanner.py
src/utils/: constants.py  crypto_db.py  i18n.py
tests/test_benchmarker/: test_comparator.py  test_hardware_profile.py  test_models.py
tests/test_flow_analyzer/: test_data_classifier.py  test_flow_aggregator.py  test_hndl_scorer.py  test_integration.py  test_models.py  test_pcap_reader.py  test_reporter.py  test_roadmap_adapter.py  test_ssh_parser.py  test_tls_parser.py
tests/test_reporter/: test_reporter.py
tests/test_roadmap/: test_cost_estimator.py  test_priority_engine.py  test_recommendation.py  test_risk_scorer.py
tests/test_scanner/: test_code_scanner.py  test_config_parser.py  test_crypto_db.py  test_inventory.py  test_models.py  test_pq_probe.py  test_ssh_scanner.py  (+2 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+39 files in other folders)
